refactor: DTO로 입력된 이름 분리