@@ -1,33 +1,20 @@
 package model;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import strategy.MoveStrategy;
 
 public class Cars {
-    private static final String CAR_NAME_DELIMITER = ",";
 
     private final List<Car> cars;
 
-    public Cars(final String names) {
-        this.cars = parseToCars(names);
-    }
-
-    private List<Car> parseToCars(final String names) {
-        return Arrays.stream(names.split(CAR_NAME_DELIMITER))
-                .map(name -> new Car(name.strip()))
+    public Cars(List<String> names) {
+        this.cars = names.stream()
+                .map(Car::new)
                 .toList();
     }
 
     public List<Car> getCars() {
-        return Collections.unmodifiableList(cars);
-    }
-
-    public List<Integer> getAllPositions() {
-        return cars.stream()
-                .map(Car::getPosition)
-                .toList();
+        return List.copyOf(cars);
     }
 
     public List<String> findWinners() {
